--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,21 @@
   <groupId>ga</groupId>
   <artifactId>ga</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.8.1</version>
+          <configuration>
+          	<source>11</source>
+            <target>11</target>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
   <dependencies>
   	<dependency>
   		<groupId>com.google.guava</groupId>
@@ -27,7 +42,26 @@
   	<dependency>
     	<groupId>io.jenetics</groupId>
     	<artifactId>jenetics</artifactId>
-    	<version>5.2.0</version>
+    	<version>6.1.0</version>
 	</dependency>
+  	<dependency>
+  		<groupId>commons-codec</groupId>
+  		<artifactId>commons-codec</artifactId>
+  		<version>1.6</version>
+  	</dependency>
+  	
+	<dependency>
+	    <groupId>io.jenetics</groupId>
+	    <artifactId>prngine</artifactId>
+	    <version>1.1.0</version>
+	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/org.uncommons.watchmaker/watchmaker-framework -->
+	<dependency>
+	    <groupId>org.uncommons.watchmaker</groupId>
+	    <artifactId>watchmaker-framework</artifactId>
+	    <version>0.7.1</version>
+	</dependency>
+  	
   </dependencies>
 </project>
