--- a/pom.xml
+++ b/pom.xml
@@ -63,5 +63,10 @@
 	    <version>0.7.1</version>
 	</dependency>
   	
+  	<dependency>
+	    <groupId>org.apache.commons</groupId>
+	    <artifactId>commons-csv</artifactId>
+	    <version>1.5</version>
+	</dependency>
   </dependencies>
 </project>
